--- a/package.json
+++ b/package.json
@@ -10,12 +10,24 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@babel/preset-env": "7.1.6",
+    "@expo/react-native-action-sheet": "*",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
+    "axios": "^0.27.2",
+    "dayjs": "*",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "prop-types": "*",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-communications": "*",
+    "react-native-gifted-chat": "^1.0.0",
+    "react-native-lightbox": "*",
+    "react-native-parsed-text": "*",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-typing-animation": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
